--- a/rover/src/client/App.css
+++ b/rover/src/client/App.css
@@ -1,16 +1,29 @@
-.App {
+.app {
   text-align: center;
+  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-header {
+.header {
   height: 50px;
   padding: 10px;
 }
 
+a {
+  color: #14a4be;
+  text-decoration: none;
+}
+
 .logo {
-  margin-top: -30px;
-  margin-bottom: -30px;
+  margin: -30px 0;
   height: 100px;
   width: 100px;
   float: left;
+}
+
+.main {
+  flex: 1 1 auto;
+  min-height: 60vh;
 }
