--- a/rover/src/client/SearchResult.css
+++ b/rover/src/client/SearchResult.css
@@ -4,10 +4,58 @@
 
 .sitter-card {
   width: 100%;
-  border: 1px solid black;
+  border: 1px solid #ddd;
   float: left;
 }
 
 .sitter-photo {
   float: left;
+  padding: 10px;
+}
+
+.sitter-info {
+  float: left;
+  padding: 10px;
+}
+
+.sitter-headline {
+  text-align: left;
+}
+
+.result-number {
+  font-size: 18px;
+}
+
+.sitter-name {
+  font-size: 20px;
+  color: #14a4be;
+  font-weight: bold;
+}
+
+.result-number + .sitter-name {
+  margin-left: 10px;
+}
+
+.review-info {
+  margin-top: 3em;
+}
+
+.review-info-item {
+  font-weight: lighter;
+  margin: 2px 6px 0 0;
+  width: fit-content;
+  font-size: 12px;
+  padding: 2px 4px;
+  color: #14a4be;
+  border: 1px solid #14a4be;
+  border-radius: 4px;
+}
+
+.review-count {
+  display: inline-block;
+}
+
+.rating-container {
+  vertical-align: middle;
+  display: inline-block;
 }
